# voice_talk_realtime

./: .gitignore  CODEX_GUIDE.md  Cargo.toml  PLAN.md  README.md  XAI_REALTIME_API_GUIDE.md
docs/: xai-official-api-reference.md
examples/: xai_node_example.mjs
prx-plugin/: Cargo.toml  plugin.toml
prx-plugin-wit/: .gitignore  Cargo.toml  README.md  build.sh  plugin.toml
prx-plugin-wit/src/: lib.rs
prx-plugin-wit/wit/: world.wit
prx-plugin/src/: lib.rs
src/: lib.rs
src/audio/: capture.rs  codec.rs  mod.rs  playback.rs
src/realtime/: mod.rs  openai.rs  protocol.rs  xai.rs
src/web/: mod.rs
web-demo/: index.html  server.py  style.css
web-demo/certs/: cert.pem  key.pem
web-demo/js/: audio_worklet.js
