[package]
name = "voice_talk_realtime"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
wasm-bindgen-futures = "0.4"
gloo-timers = { version = "0.3", features = ["futures"] }

[dependencies.web-sys]
version = "0.3"
features = [
  "WebSocket",
  "MessageEvent",
  "Event",
  "BinaryType",
  "CloseEvent",
  "ErrorEvent",
  "AudioContext",
  "AudioWorkletNode",
  "Blob",
  "Url",
  "MediaStream",
  "MediaStreamConstraints",
  "Navigator",
  "Window",
  "console",
]
