[package]
name = "voice-talk-realtime-plugin"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# prx-pdk - OpenPRX Plugin Development Kit
# Using minimal trait-based approach since prx-pdk is not yet published
